Fri Nov  6 10:30:06 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Connector_T.h:
        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
          Renamed NDDS_TYPE to DDS_TYPE. Clean up some
          unused variables.
        
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/Getter_T.h:
        * connectors/dds4ccm/impl/ndds/Updater_T.cpp:
          Renamed NDDS_TYPE to DDS_TYPE. 

Fri Nov  6 09:20:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.h
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_Connector_exec.h
        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.cpp
        * connectors/dds4ccm/impl/ndds/Builtin_Writer_T.h
        * connectors/dds4ccm/impl/ndds/Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/Writer_T.cpp
        * connectors/dds4ccm/impl/ndds/Writer_T.h
          Renamed writer files to be consistent

        * connectors/dds4ccm/impl/ndds/Builtin_Writer.h
        * connectors/dds4ccm/impl/ndds/Builtin_Writer.tpp
        * connectors/dds4ccm/impl/ndds/Writer.h
        * connectors/dds4ccm/impl/ndds/Writer.tpp
          removed

Fri Nov  6 10:03:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Resolved some compiler warnings.

        * connectors/dds4ccm/impl/ndds/Connector_T.h:
        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
          Moved the context to the DataReaderListener_T. This will